Fix image stretching bug on safari

--- a/src/stylesheets/cart/_cartListing.scss
+++ b/src/stylesheets/cart/_cartListing.scss
@@ -35,9 +35,7 @@
     display: flex;
 
     img {
-      width: 150px;
-      object-fit: contain;
-      height: 150px;
+      width: 100%;
     }
 
     h4 {
